<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="action_settings">Settings</string>
    <string name="activity_clone_name">Clone a Git repo</string>
    <string name="app_name">Password Store</string>
    <string name="clone">Clone existing</string>
    <string name="clone_fragment_text">"Welcome to Password Store

 In this screen you can either create a new repository or clone your git repository onto your device."</string>
    <string name="clone_settings">Clone</string>
    <string name="crypto_category">Category</string>
    <string name="crypto_extra_label">Extra</string>
    <string name="crypto_name_hint">name</string>
    <string name="crypto_pass_label">Password</string>
    <string name="dialog_delete">Delete directory</string>
    <string name="dialog_delete_msg">Target directory already exist. Current version support only a single store. Do you want to delete the current password store directory?</string>
    <string name="dialog_delete_title">Directory already exist</string>
    <string name="dialog_do_not_delete">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="initialize">Create new</string>
    <string name="openpgp_install_openkeychain_via">Install OpenKeychain via %s</string>
    <string name="openpgp_list_preference_none">None</string>
    <string name="title_activity_git_clone">Clone repository</string>
    <string name="title_activity_pgp_handler">PgpHandler</string>
</resources>
